@@ -30,6 +30,9 @@ DOS_VOLUME_LABEL = "Debian Inst"
 SPLASH_RLE=boot/i386/pics/klowner.rle
 #SPLASH_RLE=boot/i386/pics/polverini_b.rle
 
+# The directory boot screens for syslinux will go in.
+BOOT_SCREEN_DIR = 
+
 # Create a bootable image.
 .PHONY: arch_boot
 arch_boot:
@@ -94,7 +97,7 @@ arch_boot_screens:
 	-rm -f $(TEMP_BOOT_SCREENS)/*
 	mkdir -p $(TEMP_BOOT_SCREENS)
 	$(foreach IMG,$(wildcard boot/i386/*.txt boot/i386/*.txt.with26), \
-		./bootscreen-subst "$(MEDIA_TYPE)" "$(DEBIAN_VERSION)" "$(BUILD_DATE)" \
+		./bootscreen-subst "$(MEDIA_TYPE)" "$(DEBIAN_VERSION)" "$(BUILD_DATE)" "$(BOOT_SCREEN_DIR)" \
 		       < $(IMG) > $(TEMP_BOOT_SCREENS)/`basename $(IMG)`\
 	;)
 	if [ -n "$(SPLASH_RLE)" ]; then \
@@ -112,11 +115,55 @@ arch_miniiso:
 		cp $(TEMP_BOOT_SCREENS)/splash.rle $(TEMP_CD_TREE); \
 	fi
 	cp $(TEMP_KERNEL) $(TEMP_CD_TREE)/linux
-	cat boot/i386/syslinux.cfg \
-	| ./ramdisk-size-subst $(TEMP_INITRD) \
+	(if [ -n "$(INITRD_2.6)" ] && [ -n "$(KERNEL_2.6)" ]; then \
+		cat boot/i386/syslinux.cfg.with26; \
+	else \
+		cat boot/i386/syslinux.cfg; \
+	fi) \
+	| ./ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
 	| ./bootscreen-subst "$(MEDIA_TYPE)" "$(DEBIAN_VERSION)" "$(BUILD_DATE)" "" linux initrd.gz linux26 initrd26.gz \
 	| todos > $(TEMP_CD_TREE)/isolinux.cfg
 	ln -f $(TEMP_INITRD) $(TEMP_CD_TREE)/initrd.gz
 	mkisofs -r -J -b isolinux.bin -c boot.cat \
 		-no-emul-boot -boot-load-size 4 -boot-info-table \
 		-o $(TEMP_MINIISO) $(TEMP_CD_TREE)
+
+# Set up a directory tree for pxe booting.
+.PHONY: arch_pxe_boot
+arch_pxe_boot:
+	-rm -f $(TEMP_PXE_BOOT)/*
+	mkdir -p $(TEMP_PXE_BOOT)/debian-installer
+	mkdir -p $(TEMP_PXE_BOOT)/$(BOOT_SCREEN_DIR)
+	
+	cp $(TEMP_KERNEL) $(TEMP_PXE_BOOT)/debian-installer/linux
+	cp $(TEMP_INITRD) $(TEMP_PXE_BOOT)/debian-installer/initrd.gz
+
+	if [ -n "$(INITRD_2.6)" ] && [ -n "$(KERNEL_2.6)" ]; then \
+		mkdir $(TEMP_PXE_BOOT)/debian-installer/2.6/; \
+		cp $(INITRD_2.6) $(TEMP_PXE_BOOT)/debian-installer/2.6/linux; \
+		cp $(KERNEL_2.6) $(TEMP_PXE_BOOT)/debian-installer/2.6/initrd.gz; \
+	fi
+
+	cp /usr/lib/syslinux/pxelinux.0 $(TEMP_PXE_BOOT)
+	mkdir -p $(TEMP_PXE_BOOT)/pxelinux.cfg
+	(if [ -n "$(INITRD_2.6)" ] && [ -n "$(KERNEL_2.6)" ]; then \
+		cat boot/i386/syslinux.cfg.with26; \
+	else \
+		cat boot/i386/syslinux.cfg; \
+	fi) \
+	| ./ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
+	| ./bootscreen-subst "$(MEDIA_TYPE)" "$(DEBIAN_VERSION)" "$(BUILD_DATE)" "$(BOOT_SCREEN_DIR)" debian-installer/linux debian-installer/initrd.gz debian-installer/linux26 debian-installer/initrd26.gz \
+	> $(TEMP_PXE_BOOT)/pxelinux.cfg/default
+	
+	set -e; \
+	$(foreach file,$(wildcard $(TEMP_BOOT_SCREENS)/*.txt), \
+		if [ -e $(file).with26 ] && [ -n "$(INITRD_2.6)" ] && [ -n "$(KERNEL_2.6)" ]; then \
+			cp $(file).with26 $(TEMP_PXE_BOOT)/$(BOOT_SCREEN_DIR)/`basename $(file)`; \
+		else \
+			cp $(file) $(TEMP_PXE_BOOT)/$(BOOT_SCREEN_DIR); \
+		fi; \
+	)
+
+	if [ -n "$(SPLASH_RLE)" ]; then \
+		cp $(SPLASH_RLE) $(TEMP_PXE_BOOT)/$(BOOT_SCREEN_DIR)/splash.rle; \
+	fi
