@@ -46,6 +46,9 @@ debian-installer (20040531) UNRELEASED; urgency=low
     - Produce a single hd-media boot image that includes both kernels.
     - Parameterise filenames and paths in the syslinux.cfg files so that
       files can have different names or locations.
+    - Provide a pxeboot.tar.gz on i386 that can just be untarred into a
+      tftpserver file space for easy PXE boot setup, and update
+      INSTALLATION-HOWTO.
   * Joshua Kwan
     - Fix sparc64 CDs for good. I think.
     - Change netcfg/use_dhcp to netcfg/disable_dhcp in manual.
